Fix menu icons alignment

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -16,3 +16,6 @@
 
 // Remove the focus on modal link
 .modal-open { outline: none !important; }
+
+// Unify user menu items
+.usermenu-item i { display: inline-block !important; }
